# skilled

./: .facts  .gitignore  AGENTS.md  README.md  install.sh  package.json  pyproject.toml  skills-lock.json
.agents/skills/facts/: SKILL.md
.agents/skills/facts-discover/: SKILL.md
.agents/skills/facts-implement/: SKILL.md
.agents/skills/facts-refine/: SKILL.md
.claude/skills/: facts  facts-discover  facts-implement  facts-refine
.github/workflows/: release.yml
index/: Cargo.toml
index/src/: db.rs  main.rs  model.rs
index/src/providers/: claude_code.rs  codex.rs  droid.rs  grok.rs  mod.rs  opencode.rs
npm/: install.js  package.json
pypi/: .gitignore  pyproject.toml  setup.py
pypi/skilled_cli/: __init__.py
scripts/: build.sh
skilled/: __main__.py  app.py  models.py
skilled/providers/: __init__.py  base.py  claude_code.py
src/: app.ts  cli.ts  data.ts  main.ts  models.ts  noise.ts  theme.ts
src/providers/: base.ts  claude-code.ts  codex.ts  droid.ts  grok.ts  index.ts  opencode.ts
