[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "skilled"
version = "0.3.0"
description = "TUI dashboard for skill usage stats across AI coding tools"
license = "MIT"
requires-python = ">=3.8"
keywords = ["skilled", "tui", "cli", "coding-agents", "skill-usage", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/av/skilled"
Repository = "https://github.com/av/skilled"
Issues = "https://github.com/av/skilled/issues"

[project.scripts]
skilled = "skilled_cli:main"
